--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" href="/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+    <title>HelloTalk</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="font-poppins"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
