--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,10 @@
     <title>HelloTalk</title>
   </head>
   <body>
-    <div id="root" class="font-poppins"></div>
+    <div
+      id="root"
+      class="font-poppins bg-neutral-100 dark:bg-neutral-950"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
